--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,20 +4,21 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-        
         {
             "name": "Python Debugger: Flask",
             "type": "debugpy",
             "request": "launch",
             "module": "flask",
+            "cwd": "${workspaceFolder}/flask_app",
             "env": {
-                "FLASK_APP": "flask_app",
+                "FLASK_APP": "app",
                 "FLASK_DEBUG": "1"
             },
             "args": [
                 "run",
             ],
-            "jinja": true
+            "jinja": true,
+            "autoStartBrowser": false
         }
     ]
 }
