--- a/requirements.txt
+++ b/requirements.txt
@@ -7,10 +7,14 @@ Flask-Login==0.6.3
 Flask-SQLAlchemy==3.1.1
 Flask-WTF==1.2.1
 greenlet==3.0.3
+iniconfig==2.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.3
 MarkupSafe==2.1.5
 mysql-connector-python==8.3.0
+packaging==24.0
+pluggy==1.5.0
+pytest==8.2.0
 python-dotenv==1.0.1
 SQLAlchemy==2.0.28
 typing_extensions==4.10.0
