added readme plus fixed dotenv file

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,6 +12,7 @@
             "cwd": "${workspaceFolder}/flask_app/",
             "env": {
                 "FLASK_APP": "app",
+                "FLASK_ENV": "development",
                 "FLASK_DEBUG": "1"
             },
             "args": [
